# Data_science_projects

./: Predicting_cadiovascular_disease.ipynb  README.md  pyproject.toml
Cardiovascular_disease_project/: Predicting_cadiovascular_disease.ipynb
cardio-again/: README.md  pyproject.toml  requirements.txt  session_store.db  stats.json
cardio-again/conf/: logging.yml
cardio-again/conf/base/: catalog.yml  parameters_data_preprocessing.yml
cardio-again/conf/base/catalogs/: 01_raw.yml  02_intermediate.yml
cardio-again/conf/base/parameters/: parameters_data_preprocessing.yml
cardio-again/notebooks/: Notebook_to_nodes.ipynb  Predicting_cadiovascular_disease.ipynb
cardio-again/src/cardio_again/: __init__.py  __main__.py
cardio-again/src/cardio_again/pipelines/data_preprocessing/: nodes.py  pipeline.py
cardio-again/src/cardio_again/pipelines/data_science/: __init__.py  pipeline.py
cardio-again/src/tests/pipelines/data_preprocessing/: test_pipeline.py
cardio-again/src/tests/pipelines/data_science/: test_pipeline.py
cardio-again/tests/: test_run.py
cardio-disease-project/: README.md  pyproject.toml  requirements.txt
cardio-disease-project/conf/: logging.yml
cardio-disease-project/conf/base/: catalog.yml
cardio-disease-project/docs/source/: conf.py  index.rst
cardio-disease-project/src/cardio_disease_project/: __init__.py  __main__.py  settings.py
cardio-disease-project/tests/: test_run.py
cardio_project/: pyproject.toml  session_store.db  stats.json
cardio_project/conf/base/: catalog.yml
cardio_project/conf/base/catalogs/: 01_raw.yml
cardio_project/conf/base/parameters/: parameters_data_preprocessing.yml  parameters_data_science.yml
cardio_project/docs/source/: conf.py  index.rst
cardio_project/notebooks/: Notebook_to_nodes.ipynb  Predicting_cadiovascular_disease.ipynb  data_exploration.ipynb
cardio_project/src/tests/pipelines/: conftest.py
cardio_project/tests/: test_run.py
(+5 files in other folders)
