[tool.poetry]
name = "data-science-projects"
version = "0.1.0"
description = ""
authors = ["renato <renato.costa87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
kedro = "0.19.0"
ipython = "^8.22.2"
jupyterlab = "^4.1.5"
kedro-telemetry = "^0.3.2"
kedro-viz = "^8.0.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
